# machine-learning

./: .gitignore  CMakeLists.txt  neural_network.c  neural_network.h
common/: CMakeLists.txt  common.c  common.h  common_test.c
maths/: .matrix.c.swp  CMakeLists.txt  maths.c  maths.h  maths_test.c  matrix.c  matrix.h
mnist/: CMakeLists.txt  download_mnist_data.sh  prepare_data.c  prepare_data.h
